[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This line is shorthand for rand = "^0.8.5".
# It includes any version that is at least 0.8.5, but below 0.9.0.
rand = "0.8.5"

[[bin]]
name = "data-types"
path = "src/data-types.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "guessing-game"
path = "src/guessing-game.rs"

[[bin]]
name = "hello-world"
path = "src/hello-world.rs"

[[bin]]
name = "variables-and-mutability"
path = "src/variables-and-mutability.rs"

[[bin]]
name = "if-and-loops"
path = "src/if-and-loops.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"