[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This line is shorthand for rand = "^0.8.5".
# It includes any version that is at least 0.8.5, but below 0.9.0.
rand = "0.8.5"

[[bin]]
name = "data-types"
path = "src/data-types.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "guessing-game"
path = "src/guessing-game.rs"

[[bin]]
name = "hello-world"
path = "src/hello-world.rs"

[[bin]]
name = "variables-and-mutability"
path = "src/variables-and-mutability.rs"

[[bin]]
name = "if-and-loops"
path = "src/if-and-loops.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "references-and-borrowing"
path = "src/references-and-borrowing.rs"

[[bin]]
name = "slice-type"
path = "src/slice-type.rs"

[[bin]]
name = "defining-and-instantiating-structs"
path = "src/defining-and-instantiating-structs.rs"

[[bin]]
name = "program-using-structs"
path = "src/program-using-structs.rs"

[[bin]]
name = "method-syntax"
path = "src/method-syntax.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "match"
path = "src/match.rs"

[[bin]]
name = "if-let"
path = "src/if-let.rs"

[[bin]]
name = "backyard"
path = "src/backyard/main.rs"

[lib]
name = "restaurant"
path = "src/restaurant/lib.rs"