[package]
# Crate names are on a first-come, first-served basis.
# This is the name used as the crate name.
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"
# Metadata fields necessary for publishing to crates.io are:
# license uses SPDX identifiers.
# For custom licenses, use the license-file field to provide a file name to the license doc.
# You can use the OR operator on the licenses.
license = "MIT OR Apache-2.0"
description = "Just another study-repo for learning Rust"

# To publish the crate, use `cargo publish`.
# To deprecate a crate version, use `cargo yank --vers <version>`.
# A yank can be undone by providing the `--undo` option.
# Yanked versions are still available for projects that specify it in their Cargo.lock file, so they don't break.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This line is shorthand for rand = "^0.8.5".
# It includes any version that is at least 0.8.5, but below 0.9.0.
rand = "0.8.5"

# Cargo has two main profiles: dev and release.
# It uses dev by default and release when you provide the --release option.
# Custom profiles can be added by using a [profile.*] section.
# The opt-level for dev is 0 and 3 for release.
# It tells the compiler how much optimization should be applied.

[[bin]]
name = "data-types"
path = "src/data-types.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "guessing-game"
path = "src/guessing-game.rs"

[[bin]]
name = "hello-world"
path = "src/hello-world.rs"

[[bin]]
name = "variables-and-mutability"
path = "src/variables-and-mutability.rs"

[[bin]]
name = "if-and-loops"
path = "src/if-and-loops.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "references-and-borrowing"
path = "src/references-and-borrowing.rs"

[[bin]]
name = "slice-type"
path = "src/slice-type.rs"

[[bin]]
name = "defining-and-instantiating-structs"
path = "src/defining-and-instantiating-structs.rs"

[[bin]]
name = "program-using-structs"
path = "src/program-using-structs.rs"

[[bin]]
name = "method-syntax"
path = "src/method-syntax.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "match"
path = "src/match.rs"

[[bin]]
name = "if-let"
path = "src/if-let.rs"

[[bin]]
name = "backyard"
path = "src/backyard/main.rs"

[lib]
name = "restaurant"
path = "src/restaurant/lib.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"

[[bin]]
name = "string"
path = "src/string.rs"

[[bin]]
name = "hash-map"
path = "src/hash-map.rs"

[[bin]]
name = "error-handling"
path = "src/error-handling.rs"

[[bin]]
name = "removing-duplication"
path = "src/removing-duplication.rs"

[[bin]]
name = "generic-data-types"
path = "src/generic-data-types.rs"

[[bin]]
name = "aggregator"
path = "src/aggregator/main.rs"

[[bin]]
name = "minigrep"
path = "src/minigrep/main.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[[bin]]
name = "adder"
path = "src/adder/main.rs"

[[bin]]
name = "closures"
path = "src/closures.rs"

[[bin]]
name = "iterators"
path = "src/iterators.rs"

[[bin]]
name = "iterator-performance"
path = "src/iterator-performance.rs"

[[bin]]
name = "publishing"
path = "src/publishing.rs"
