[package]
name = "hello_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# To define a procedural macro, the crate needs this attribute to be true.
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"